force-app/main/default/objects/hed__Program_Enrollment__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Learner fee type</description>
    <inlineHelpText>Learner fee type: assists in calculating Course Connection fees, payments owed, and Course Offering revenue totals.</inlineHelpText>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LMIC</fullName>
            </value>
            <value>
                <fullName>Matriculated</fullName>
                <isActive>false</isActive>
                <label>Matriculated</label>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>Non-UC</fullName>
                <isActive>false</isActive>
                <label>Non-UC</label>
            </value>
            <value>
                <fullName>Non-UC, Non-Matriculated</fullName>
            </value>
            <value>
                <fullName>Non-UC Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Non-UC Grad Student</fullName>
            </value>
            <value>
                <fullName>Non-UC Matriculated</fullName>
            </value>
            <value>
                <fullName>Non-UC Post-Doc</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
                <isActive>false</isActive>
                <label>UC</label>
            </value>
            <value>
                <fullName>UC Ad Hoc</fullName>
            </value>
            <value>
                <fullName>UC Grad Student</fullName>
            </value>
            <value>
                <fullName>UC Matriculated</fullName>
            </value>
            <value>
                <fullName>UC Post-Doc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>