force-app/main/default/objects/hed__Program_Enrollment__c/fields/Invoice_Last_Sent__c.field-meta.xml
<CustomField>
  <fullName>Invoice_Last_Sent__c</fullName>
  <label>Invoice Last Sent</label>
  <type>DateTime</type>
</CustomField>