force-app/main/default/objects/hed__Program_Enrollment__c/fields/Last_Invoice_ContentVersion_Id__c.field-meta.xml
<CustomField>
  <fullName>Last_Invoice_ContentVersion_Id__c</fullName>
  <label>Last Invoice ContentVersion Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>