force-app/main/default/objects/hed__Program_Enrollment__c/fields/Regenerate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Regenerate_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked and saved, removes the existing generated invoice PDF on this Program Enrollment and creates a new one (async). Cleared automatically after regeneration runs.</description>
    <inlineHelpText>Check and Save to regenerate the invoice PDF with current data and template. Does not resend student or office emails.</inlineHelpText>
    <label>Regenerate Invoice</label>
    <type>Checkbox</type>
</CustomField>