force-app/main/default/objects/hed__Program_Enrollment__c/fields/Suppress_Automated_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Automated_Late_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Program Enrollment Apply Late Fee flow sets Enrollment Late Fee to $0 and skips the standard late-fee calculation. Use when a course offering start date is later than the term (e.g. a section that starts mid-term).</description>
    <inlineHelpText>Check when the student&apos;s course section starts on a different schedule than the term start; suppresses the standard late fee from automation.</inlineHelpText>
    <label>Suppress Automated Late Fee</label>
    <type>Checkbox</type>
</CustomField>